--- a/COMP397-CreateJS-BoilerPlate1/index.html
+++ b/COMP397-CreateJS-BoilerPlate1/index.html
@@ -3,7 +3,8 @@
 <!-- Author: Guashti Singh -->
 <!-- App: Midterm#1 Dice Roller -->
 <!-- Date: June 16, 2015 -->
-<!-- Description: Die Roller -->
+<!-- Description: Die Roller, 
+    https://github.com/guashtiSingh/Midterm-1DieRollerFinal -->
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,14 +15,12 @@
 <body onload="preload();">
     <!-- Game Container -->
     <canvas id="canvas" width="320" height="480"></canvas>
-
     <!-- JavaScript Section -->
     <script src="Scripts/lib/Stats.js"></script>
     <script src="Scripts/lib/easeljs-0.8.0.min.js"></script>
     <script src="Scripts/lib/tweenjs-0.6.0.min.js"></script>
     <script src="Scripts/lib/soundjs-0.6.0.min.js"></script>
     <script src="Scripts/lib/preloadjs-0.6.0.min.js"></script>
-
     <!-- Game Scripts -->
     <script src="Scripts/game.js"></script>
 </body>
